MAJ du site public avec le bon lien de téléchargement du tutoriel

--- a/lab_02.html
+++ b/lab_02.html
@@ -58,7 +58,7 @@
 <h2>Obtenir le paquet pour le tutoriel. <em>01</em></h2>
 <p>Télécharger le paquet pour le tutoriel depuis:</p>
 <ul>
-	<li>L&#8217;URL <a href="http://gitimmersion.com/git_tutorial.zip">http://gitimmersion.com/git_tutorial.zip</a></li>
+	<li>L&#8217;URL <a href="http://gitimmersion.fr/git_tutorial.zip">http://gitimmersion.fr/git_tutorial.zip</a></li>
 </ul>
 <h2>Dézipper le tutoriel <em>02</em></h2>
 <p>Le paquet pour le tutoriel doit contenir un répertoire principal &#8220;git_tutorial&#8221; avec trois sous-répertoires:</p>
