--- a/lab_28.html
+++ b/lab_28.html
@@ -71,22 +71,22 @@ Merge made by recursive.
  1 files changed, 1 insertions(+), 0 deletions(-)
  create mode 100644 LISEZMOI
 $ git hist --all
-*   197c954 2012-05-07 | Merge branch 'master' into saluer (HEAD, saluer) [Jim Weirich]
+*   244cb3f 2012-05-08 | Merge branch 'master' into saluer (HEAD, saluer) [Jim Weirich]
 |\  
-| * fe9164f 2012-05-07 | Ajout d'un LISEZMOI (master) [Jim Weirich]
-* | 43ab17e 2012-05-07 | Rakefile mis à jour [Jim Weirich]
-* | 868fc3c 2012-05-07 | bonjour utilise Faireunsalut [Jim Weirich]
-* | d9d726a 2012-05-07 | Ajout de la classe Faireunsalut [Jim Weirich]
+| * 2efeb4e 2012-05-08 | Ajout d'un LISEZMOI (master) [Jim Weirich]
+* | dcc1252 2012-05-08 | Rakefile mis à jour [Jim Weirich]
+* | cbe47f8 2012-05-08 | bonjour utilise Faireunsalut [Jim Weirich]
+* | 9101cb4 2012-05-08 | Ajout de la classe Faireunsalut [Jim Weirich]
 |/  
-* 50288bc 2012-05-07 | Ajout d'un Rakefile [Jim Weirich]
-* fdbaff5 2012-05-07 | Déplacement de bonjour.rb dans lib [Jim Weirich]
-* 0eca227 2012-05-07 | Add an author/email comment [Jim Weirich]
-* 392ee14 2012-05-07 | Ajout d'un commentaire (v1) [Jim Weirich]
-* a81dfe7 2012-05-07 | Ajouter une valeur par défaut (v1-beta) [Jim Weirich]
-* 9de1147 2012-05-07 | Utilisation de ARGV [Jim Weirich]
-* f5556a9 2012-05-07 | Mon premier commit [Jim Weirich]</pre>
-<p>En fusionnant master dans notre branche saluer périodiquement, vous pouvez récupérer n&#8217;importe quels changements dans master et garder vos changements dans saluer pour être compatible avec ceux dans la branche principale.</p>
-<p>However, Cela produit des graphes de commit très &#8220;moche&#8221;. plus tard, nous verrons les options pour faire un changement de base (rebase) plutôt qu&#8217;une fusion (merge).</p>
+* 40fb2cc 2012-05-08 | Ajout d'un Rakefile [Jim Weirich]
+* 7ce5d64 2012-05-08 | Déplacement de bonjour.rb dans lib [Jim Weirich]
+* 35d118c 2012-05-08 | Add an author/email comment [Jim Weirich]
+* 167ff0c 2012-05-08 | Ajout d'un commentaire (v1) [Jim Weirich]
+* a33b91a 2012-05-08 | Ajouter une valeur par défaut (v1-beta) [Jim Weirich]
+* f45bf4e 2012-05-08 | Utilisation de ARGV [Jim Weirich]
+* a8bb23a 2012-05-08 | Mon premier commit [Jim Weirich]</pre>
+<p>En fusionnant master dans votre branche saluer périodiquement, vous pouvez récupérer n&#8217;importe quels changements dans master et garder vos changements dans saluer pour être compatible avec ceux dans la branche principale.</p>
+<p>Cependant, cela produit des graphes de commit très &#8220;moches&#8221;. Plus tard, nous verrons les options pour faire un changement de base (rebase) plutôt qu&#8217;une fusion (merge).</p>
 <h2>Et après <em>02</em></h2>
 <p>Mais en premier, que se passe-t-il si les changements dans master rentrent en conflit avec ceux effectués dans saluer?</p>
   </div>
