--- a/lab_38.html
+++ b/lab_38.html
@@ -73,18 +73,18 @@ Rakefile
 <pre class="instructions">git hist --all</pre>
 <h4>En sortie:</h4>
 <pre class="sample">$ git hist --all
-* c8f930f 2012-05-07 | Rakefile mis à jour (HEAD, origin/saluer, origin/master, origin/HEAD, master) [Jim Weirich]
-* 4a01131 2012-05-07 | bonjour utilise Faireunsalut [Jim Weirich]
-* edbb2f8 2012-05-07 | Ajout de la classe Faireunsalut [Jim Weirich]
-* fe9164f 2012-05-07 | Ajout d'un LISEZMOI [Jim Weirich]
-* 50288bc 2012-05-07 | Ajout d'un Rakefile [Jim Weirich]
-* fdbaff5 2012-05-07 | Déplacement de bonjour.rb dans lib [Jim Weirich]
-* 0eca227 2012-05-07 | Add an author/email comment [Jim Weirich]
-* 392ee14 2012-05-07 | Ajout d'un commentaire (v1) [Jim Weirich]
-* a81dfe7 2012-05-07 | Ajouter une valeur par défaut (v1-beta) [Jim Weirich]
-* 9de1147 2012-05-07 | Utilisation de ARGV [Jim Weirich]
-* f5556a9 2012-05-07 | Mon premier commit [Jim Weirich]</pre>
-<p>Vous devriez maintenant voir une liste de tous les commits dans le nouveau dépôt, et il devrait (plus ou moins) correspondre à l&#8217;historique commits dans le dépôt original. La seule différence devrait être dans le nom des branches.</p>
+* 55aa3f4 2012-05-08 | Rakefile mis à jour (HEAD, origin/saluer, origin/master, origin/HEAD, master) [Jim Weirich]
+* 45a2e7a 2012-05-08 | bonjour utilise Faireunsalut [Jim Weirich]
+* 011229b 2012-05-08 | Ajout de la classe Faireunsalut [Jim Weirich]
+* 2efeb4e 2012-05-08 | Ajout d'un LISEZMOI [Jim Weirich]
+* 40fb2cc 2012-05-08 | Ajout d'un Rakefile [Jim Weirich]
+* 7ce5d64 2012-05-08 | Déplacement de bonjour.rb dans lib [Jim Weirich]
+* 35d118c 2012-05-08 | Add an author/email comment [Jim Weirich]
+* 167ff0c 2012-05-08 | Ajout d'un commentaire (v1) [Jim Weirich]
+* a33b91a 2012-05-08 | Ajouter une valeur par défaut (v1-beta) [Jim Weirich]
+* f45bf4e 2012-05-08 | Utilisation de ARGV [Jim Weirich]
+* a8bb23a 2012-05-08 | Mon premier commit [Jim Weirich]</pre>
+<p>Vous devriez maintenant voir une liste de tous les commits dans le nouveau dépôt, et il devrait (plus ou moins) correspondre à l&#8217;historique des commits dans le dépôt original. La seule différence devrait être dans le nom des branches.</p>
 <h2>Branches distantes <em>03</em></h2>
 <p>Vous devriez voir une branche <strong>master</strong> (avec <strong><span class="caps">HEAD</span></strong>) dans la liste d&#8217;historique. Mais vous allez voir aussi nombres de branches nommées étrangement (<strong>origin/master</strong>, <strong>origin/saluer</strong> et <strong>origin/<span class="caps">HEAD</span></strong>). Nous allons les voir sous peu.</p>
   </div>
