--- a/lab_39.html
+++ b/lab_39.html
@@ -80,7 +80,7 @@ origin
   Local ref configured for 'git push':
     master pushes to master (up to date)
 </pre>
-<p>Maintenant, nous voyons que le dépôt distant &quot;origin&quot;est simplement le dépôt original <strong>bonjour</strong>. Les dépôts distants vivent typiquement sur une machine séparée, de manière possible aussi sur une serveur centralisé. Comme nous le voyons ici, cependant, ils peuvent aussi pointer vers un répertoire sur la même machine. Il n&#8217;y a rien de particulier à propos du nom &#8220;origin&#8221;, cependant la convention est d&#8217;utiliser le nom &#8220;origin&#8221; pour le nom du dépôt centralisé primaire (s&#8217;il y en a un).</p>
+<p>Maintenant, nous voyons que le dépôt distant &quot;origin&quot;est simplement le dépôt original <strong>bonjour</strong>. Les dépôts distants vivent typiquement sur une machine séparée, ils peuvent aussi être sur une serveur centralisé comme nous le voyons ici. Cependant, ils peuvent aussi pointer vers un répertoire sur la même machine. Il n&#8217;y a rien de particulier à propos du nom &#8220;origin&#8221;, cependant la convention est d&#8217;utiliser le nom &#8220;origin&#8221; pour le nom du dépôt centralisé primaire (s&#8217;il y en a un).</p>
   </div>
 
   <div id="index">
