--- a/lab_41.html
+++ b/lab_41.html
@@ -70,7 +70,7 @@ récupérer les changements</li>
 <h4>Exécuter:</h4>
 <pre class="instructions">git add LISEZMOI
 git commit -m "Changement de LISEZMOI dans le dépôt original"</pre>
-<h2>Après <em>02</em></h2>
+<h2>Et après <em>02</em></h2>
 <p>Le dépôt original maintenant a des changements tardifs qui ne sont pas dans la version clonée. Ensuite, nous allons récupérer ces changements dans le dépôt cloné.</p>
   </div>
 
