--- a/lab_45.html
+++ b/lab_45.html
@@ -55,7 +55,7 @@
 <ul>
 	<li>Apprendre comment ajouter une branche locale qui suit une branche distante.</li>
 </ul>
-<p>Les branches qui commencent avec remotes/origin sont les branches du dépôt original. Notez que nous n&#8217;avons plus une branche appelée saluer, mais git sait que le dépôt original has une branche saluer.</p>
+<p>Les branches qui commencent avec remotes/origin sont les branches du dépôt original. Notez que nous n&#8217;avons plus une branche appelée saluer, mais git sait que le dépôt original a une branche saluer.</p>
 <h2>Ajouter une branche locale qui permet de suivre une branche distante. <em>01</em></h2>
 <h4>Exécuter:</h4>
 <pre class="instructions">git branch --track saluer origin/saluer
@@ -71,8 +71,8 @@ $ git branch -a
   remotes/origin/master
   remotes/origin/saluer
 $ git hist --max-count=2
-* bef3b12 2012-05-07 | Changement de LISEZMOI dans le dépôt original (HEAD, origin/master, origin/HEAD, master) [Jim Weirich]
-* c8f930f 2012-05-07 | Rakefile mis à jour (origin/saluer, saluer) [Jim Weirich]</pre>
+* 433155f 2012-05-08 | Changement de LISEZMOI dans le dépôt original (HEAD, origin/master, origin/HEAD, master) [Jim Weirich]
+* 55aa3f4 2012-05-08 | Rakefile mis à jour (origin/saluer, saluer) [Jim Weirich]</pre>
 <p>Nous pouvons maintenant voir que la branche saluer dans la liste des branches et dans le log.</p>
   </div>
 
