--- a/lab_48.html
+++ b/lab_48.html
@@ -55,7 +55,7 @@
 <ul>
 	<li>Apprendre comment envoyer un changement vers un dépôt distant.</li>
 </ul>
-<p>Comme les dépôts dit &#8220;nus&#8221; sont habituellement partagé sur une sorte de serveur réseau, il est difficile de se rendre dans le dépôt et de récupérer. les changements. Ainsi nous avons besoins d&#8217;envoyer nos changements dans les autres dépôts.</p>
+<p>Comme les dépôts dit &#8220;nus&#8221; sont habituellement partagés sur une sorte de serveur réseau, il est difficile de se rendre dans le dépôt et de récupérer. les changements. Ainsi nous avons besoin d&#8217;envoyer nos changements dans les autres dépôts.</p>
 <p>Commençons par créer un changement à envoyer. Editer le fichier <span class="caps">LISEZMOI</span> et le commiter</p>
 <h4>Fichier: <em><span class="caps">LISEZMOI</span></em></h4>
 <pre class="file">C'est un exemple de Bonjour Monde pour le tutoriel git.
@@ -72,7 +72,7 @@ git commit -m "Ajout du commentaire partagé à lisezmoi"</pre>
 <h4>En sortie:</h4>
 <pre class="sample">$ git push partager master
 To ../bonjour.git
-   bef3b12..f2f394d  master -&gt; master
+   433155f..add1d48  master -&gt; master
 </pre>
 <p class="note"><strong><span class="caps">NOTE</span>:</strong> Nous devons explicitement nommé la branche master qui devra recevoir l&#8217;envoi. Il est possible de le configurer automatiquement, mais je ne me souviens <em>jamais</em> des commandes pour le faire. Regarder le fichier gem &#8220;Git Remote Branch&#8221; pour une gestion facile des branches distantes.</p>
   </div>
