--- a/lab_50.html
+++ b/lab_50.html
@@ -62,7 +62,7 @@
 git daemon --verbose --export-all --base-path=.</pre>
 <p>Maintenant, dans une fenêtre de terminal séparée, aller au répertoire de travail</p>
 <h4>Exécuter:</h4>
-<pre class="instructions"># (From the work directory)
+<pre class="instructions"># (Depuis le répertoire de travail)
 git clone git://localhost/bonjour.git network_bonjour
 cd network_bonjour
 ls</pre>
